tests/language_modules/10_expressions/valid/parenthesized_expression.vf
module ParenthesizedExpression

procedure main()
is
    check (1 + 2) * 3 = 9
end main

end ParenthesizedExpression