tests/language_modules/10_expressions/invalid_semantics/unknown_variable.vf
module UnknownVariableExpression

procedure main()
is
    check missing = 1
end main

end UnknownVariableExpression